--- a/SpeedrunStyle.css
+++ b/SpeedrunStyle.css
@@ -45,8 +45,13 @@ button {
     color: white;
     min-height: 33%;
     max-width: 66%;
-    text-align: right;
     padding: 0%;
+}
+
+#data-box {
+    display: inline-flex;
+    width: 100%;
+    height: 100%;
 }
 
 #date-panel {
@@ -55,13 +60,5 @@ button {
     min-height: 33%;
     max-width: 66%;
     text-align: right;
-    display: inline-block;
-}
-
-#info-panel {
-    background-color: #444444;
-    color: white;
-    width: 33%;
-    min-height: 33%;
-    display: inline-flex;
+    display: inline-flexbox;
 }
