--- a/SpeedrunStyle.css
+++ b/SpeedrunStyle.css
@@ -20,8 +20,8 @@ button {
 
 .date-box {
     display: inline-block;
-    height: fit-content;
-    width: fit-content;
+    height: 50%;
+    width: 5%;
     resize: none;
     text-align: center;
     max-lines: 1;
@@ -40,25 +40,18 @@ button {
     min-height: 66%;
 }
 
-#options-panel {
-    background-color: #444444;
-    color: white;
-    min-height: 33%;
-    max-width: 66%;
-    padding: 0%;
-}
-
 #data-box {
-    display: inline-flex;
-    width: 100%;
-    height: 100%;
+    width: 32%;
+    height: 33%;  
+    max-height: 33%;
 }
 
 #date-panel {
     background-color: #444444;
     color: white;
-    min-height: 33%;
-    max-width: 66%;
+    max-height: 33%;
+    width: 67%;
     text-align: right;
-    display: inline-flexbox;
+    display: inline-block;
+    padding: 10px;
 }
