--- a/SpeedrunStyle.css
+++ b/SpeedrunStyle.css
@@ -24,7 +24,6 @@ button {
     width: 5%;
     resize: none;
     text-align: center;
-    max-lines: 1;
 }
 
 #legend {
@@ -44,14 +43,16 @@ button {
     width: 32%;
     height: 33%;  
     max-height: 33%;
+    display: inline-block;
 }
 
-#date-panel {
+#filter-panel {
     background-color: #444444;
     color: white;
     max-height: 33%;
     width: 67%;
     text-align: right;
+    justify-content: space-between;
     display: inline-block;
     padding: 10px;
 }
