--- a/SpeedrunStyle.css
+++ b/SpeedrunStyle.css
@@ -11,6 +11,17 @@ div {
 
 p {
     display: inline-block;
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
+
+h3 {
+    margin-top: 7px;
+    margin-bottom: 7px;
+}
+
+textarea {
+    resize: none;
 }
 
 button {
@@ -20,13 +31,11 @@ button {
 
 .date-box {
     display: inline-block;
-    resize: none;
     text-align: center;
 }
 
-.time-box {
+#time-box {
     display: inline-block;
-    resize: none;
     text-align: center;
 }
 
@@ -44,9 +53,6 @@ button {
 }
 
 #data-box {
-    width: 32%;
-    height: 33%;  
-    max-height: 33%;
     display: inline-block;
 }
 
